--- a/pyproject.toml
+++ b/pyproject.toml
@@ -139,11 +139,11 @@ packages = ["/cosmos"]
 [tool.hatch.envs.tests]
 dependencies = [
     "astronomer-cosmos[tests]",
-    "apache-airflow-providers-cncf-kubernetes>=5.1.1",
-    "apache-airflow-providers-amazon[s3fs]>=8.0.0",
-    "apache-airflow-providers-docker>=3.5.0",
-    "apache-airflow-providers-google",
-    "apache-airflow-providers-microsoft-azure",
+    #"apache-airflow-providers-cncf-kubernetes>=5.1.1",
+    #"apache-airflow-providers-amazon[s3fs]>=8.0.0",
+    #"apache-airflow-providers-docker>=3.5.0",
+    #"apache-airflow-providers-google",
+    #"apache-airflow-providers-microsoft-azure",
     # "apache-airflow-providers-postgres",
     "types-PyYAML",
     "types-attrs",
