--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -82,7 +82,7 @@ jobs:
           uv pip install --system hatch
           hatch -e tests.py${{ matrix.python-version }}-${{ matrix.airflow-version }} run pip freeze
           hatch shell tests.py${{ matrix.python-version }}-${{ matrix.airflow-version }}
-          pip install "apache-airflow-providers-amazon[s3fs]>=8.0.0"
+          pip install "apache-airflow-providers-amazon[s3fs]"
           pip install "apache-airflow-providers-google"
 
       - name: Test Cosmos against Airflow ${{ matrix.airflow-version }} and Python ${{ matrix.python-version }}
