--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -81,9 +81,9 @@ jobs:
           python -m pip install uv
           uv pip install --system hatch
           hatch -e tests.py${{ matrix.python-version }}-${{ matrix.airflow-version }} run pip freeze
-          # hatch shell tests.py${{ matrix.python-version }}-${{ matrix.airflow-version }}
-          hatch run pip install "apache-airflow-providers-amazon[s3fs]"
-          hatch run pip install "apache-airflow-providers-google"
+#          # hatch shell tests.py${{ matrix.python-version }}-${{ matrix.airflow-version }}
+#          hatch run pip install "apache-airflow-providers-amazon[s3fs]"
+#          hatch run pip install "apache-airflow-providers-google"
 
       - name: Test Cosmos against Airflow ${{ matrix.airflow-version }} and Python ${{ matrix.python-version }}
         run: |
